Page overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -187,10 +187,8 @@ header{
 
 .mobile-cta::before{
     content: url("../images/cta-arrow.svg");
-    width: max(100%);
-    height: 100%;
+    min-width: 20%;
     position: absolute;
-    padding-right: 100vw;
     padding-top: 15px;
     opacity: 0;
     animation: example 900ms ease-in-out infinite alternate;
